--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,8 +37,10 @@ dependencies:
   firebase_core: ^1.12.0
   firebase_auth: ^3.3.7
   cloud_firestore: ^3.1.8
-
-  # Application Depends
+  app_tracking_transparency: ^2.0.2+1
+  get: ^4.6.1
+  get_storage: ^2.0.3
+  onesignal_flutter: ^3.2.8
 
 dev_dependencies:
   flutter_test:
@@ -63,9 +65,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - lib/assets
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
