--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   app_tracking_transparency: ^2.0.2+1
   get: ^4.6.1
   get_storage: ^2.0.3
+  flutter_easyloading: ^3.0.3
 
 dev_dependencies:
   flutter_test:
