--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   get_storage: ^2.0.3
   flutter_easyloading: ^3.0.3
   google_fonts: ^2.3.1
+  flutter_native_splash: ^2.0.4
 
 dev_dependencies:
   flutter_test:
