--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,13 +36,15 @@ dependencies:
   cupertino_icons: ^1.0.2
   firebase_core: ^1.12.0
   firebase_auth: ^3.3.7
-  cloud_firestore: ^3.1.8
+  # cloud_firestore: ^3.1.8
   app_tracking_transparency: ^2.0.2+1
   get: ^4.6.1
   get_storage: ^2.0.3
   flutter_easyloading: ^3.0.3
   google_fonts: ^2.3.1
   flutter_native_splash: ^2.0.4
+  flutter_svg: ^1.0.3
+  sqflite: ^2.0.2
 
 dev_dependencies:
   flutter_test:
@@ -63,3 +65,4 @@ flutter:
   uses-material-design: true
   assets:
     - lib/assets/fonts/poppins/
+    - lib/assets/icons/
